# LuatOS-ESP32

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.en.md  README.md  c3_2m.csv  ota_test.csv  partitions.csv  partitions_16m.csv  partitions_8m.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3  soc_pack.bat  userguide.md
.gitee/: ISSUE_TEMPLATE.zh-CN.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: commit-build-c3.yml  commit-build-s3.yml  commit-build.yml  release-c3.yml  release-s3.yml
apidoc/: esp32.md  esphttp.md  espmqtt.md  espnow.md  espws.md  i2s.md  lvgl.md  mcu.md  miniz.md  ntp.md  rmt.md  rtc.md  sdmmc.md  socket.md  wdt.md  wlan.md
components/lua/: CMakeLists.txt  Kconfig  component.mk
components/lua/src/: loadlib.c
components/luat/: CMakeLists.txt  README.md
components/luat/freertos/: luat_msgbus_freertos.c  luat_rtos_freertos_queue.c  luat_rtos_freertos_task.c  luat_timer_freertos.c
components/luat/include/: espnow_handle.h  luat_base.h  luat_ble_esp32.h  luat_conf_bsp.h  luat_conf_esp32.h  luat_fs.h  luat_libs.h  luat_pwm.h  luat_spi.h  pinmap.h
components/luat/modules/: luat_fs_weak.c  luat_lib_crypto.c  luat_lib_pwm.c  luat_lib_spi.c  luat_lib_uart.c  luat_lib_wlan.c  luat_log_weak.c  luat_main.c  luat_malloc_weak.c
components/luat/port/: luat_adc_esp32.c  luat_base_esp32.c  luat_ble_esp32.c  luat_crypto_esp32.c  luat_espnow_esp32.c  luat_fs_esp32.c  luat_fs_weak.c  luat_gpio_esp32.c  luat_i2c_esp32.c  luat_i2s_esp32.c  luat_lib_esp32.c  luat_lib_esphttp.c  luat_lib_espmqtt.c  luat_lib_espws.c  luat_lib_wlan.c  luat_log_esp32.c  luat_malloc_esp32.c  luat_mcu_esp32.c  luat_miniz_esp32.c  luat_nimble_esp32.c  luat_ntp_esp32.c  luat_pwm2_esp32.c  luat_pwm_esp32.c  luat_rmt_esp32.c  luat_rtc_esp32.c  luat_rtos_esp32.c  luat_sdmmc_esp32.c  luat_sfd_esp32_onchip.c  luat_socket_esp32.c  luat_spi_device_esp32.c  luat_spi_esp32.c  luat_twai_esp32.c  luat_u8g2_esp32.c  luat_uart_esp32.c  luat_wdt_esp32.c  luat_wlan_esp32.c
components/net/: CMakeLists.txt
components/net/binding/: luat_lib_lwip.c  luat_lib_lwip_mqtt.c
demo/: main.lua
demo/adc/: main.lua
demo/ble/: main.lua
demo/crypto/: main.lua
demo/esphttp/: main.lua
demo/espmqtt/: main.lua
demo/espnow/: main.lua
demo/espwebsocket/: main.lua
demo/fdb/: main.lua
demo/gpio/: main.lua
demo/i2c/: main.lua
demo/json/: main.lua
demo/lcd/: main.lua
demo/lvgl/: main.lua
demo/meminfo/: main.lua
demo/miniz/: main.lua
demo/nimble/broadcast/: main.lua
demo/ntp/: main.lua
demo/ota/: main.lua
demo/pm/deepsleep/: main.lua
demo/pm/lightsleep/: main.lua
demo/pwm/: main.lua
demo/pwm2/: main.lua
demo/sdmmc/: main.lua
demo/sfud/: main.lua
demo/smartconfig/: main.lua
demo/socket/: main.lua
demo/socket/client/tcp/: main.lua
demo/socket/client/udp/: main.lua
demo/socket/server/tcp/: main.lua
demo/socket/server/udp/: main.lua
demo/spi/: main.lua
demo/uart/: main.lua
demo/wifi/: main.lua
demo/wifi/ap/: main.lua
demo/wifi/smartconfig/: main.lua
demo/wifi/station/: main.lua
demo/ws2812/: main.lua
doc/: CHANGELOG.md  RELEASE_CHANGELOG.md  SUPPORT.md  UserGuideCilon.md  VDD_SPI_AS_GPIO.md  userguide.md
lua/: CMakeLists.txt
luat/: CMakeLists.txt
main/: CMakeLists.txt  hello_world_main.c  luatos_main.c
patches/: 001_v4.4_fix_smartconfig_ack.patch  README.md
soc_tools/: info.json  info_c3.json  info_c3_usb.json  info_s3.json
spiffs/: main.lua
test/: adcTest.lua  bleTest.lua  cameraTest.lua  cryptoTest.lua  dispTest.lua  einkTest.lua  esp32Test.lua  esphttpTest.lua  espnowTest.lua  fdbTest.lua  fsTest.lua  gpioTest.lua  i2cTest.lua  jsonTest.lua  keyboardTest.lua  lcdTest.lua  lvglTest.lua  main.lua  mcuTest.lua  mqttTest.lua  packTest.lua  pinTest.lua  pwmTest.lua  rtcTest.lua  rtosTest.lua  sdioTest.lua  sfdTest.lua  sfudTest.lua  socketTest.lua  spiTest.lua  statemTest.lua  stringTest.lua  sys.lua  sysTest.lua  touchkeyTest.lua  u8g2Test.lua  uartTest.lua  wdtTest.lua  wlanTest.lua  zbuffTest.lua  (+1 more)
tools/: README.md  config.toml  esp32.py  esp32_luatos_tool.py  esp32v2-dev.py  esp32v2.py  esp32v3.py  local.ini  luadb.py  requirements.txt
userdoc/: README.md  esp32.md  espmqtt.md  espnow.md  luat_lib_adc.md  luat_lib_esp32.md  luat_lib_gpio.md  luat_lib_i2c.md  luat_lib_log.md  luat_lib_pwm.md  luat_lib_pwm2.md  luat_lib_rtos.md  luat_lib_spi.md  luat_lib_timer.md  luat_lib_uart.md  luat_lib_wlan.md  pwm2.md  rmt.md  socket.md  twai.md  wlan.md
